tests/ui/rmeta/no_optitimized_mir.stderr
error: missing optimized MIR for an item in the crate `rmeta_meta`
   |
note: missing optimized MIR for this item (was the crate `rmeta_meta` compiled with `--emit=metadata`?)
  --> $DIR/auxiliary/rmeta-meta.rs:10:1
   |
LL | pub fn missing_optimized_mir() {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

